# py

./: .gitignore  Taskfile.yml  flow.toml  justfile  mlx-model-install.py  model.json  pyproject.toml  readme.md
cli/flow/: __main__.py  cli.py
cli/scripts_cli/: __init__.py  __main__.py  cli.py
cli/snapvision/: __init__.py  __main__.py  backends.py  cli.py  config.py  screenshot.py  service.py
scripts/: get_window_titles.py  mlx.py  pydantic.py  pydantic_ai.py  run.py  safetensors.py  split_mp3.py  update_python_version.py
server/: __init__.py  app.py  config.py
server/routes/: __init__.py  health.py
try/: attention.py  pydantic_ai.py
